examples/test/testpolicy4575.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4575
  namespace: namespace462
spec:
  podSelector:
    matchLabels:
      key4: value3
      key6: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value19
      podSelector:
        matchLabels:
          key6: value25
          key22: value27
